manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-without-host
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - ab4cee4aa148440dc9f61bc8ce46bf27-238763611.ap-south-1.elb.amazonaws.com
    secretName: tls-secret
  rules:
  - host: ab4cee4aa148440dc9f61bc8ce46bf27-238763611.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 4499
